--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,26 @@
             android:textSize="20dp"
             android:layout_margin="16dp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Number of People who is actually moving there"
+            android:textSize="16dp"/>
+
+        <TextView
+            android:id="@+id/price_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="0"
+            android:textColor="#800000"
+            android:textSize="20dp"
+            android:layout_margin="16dp"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="I want to join"
+            android:text="Calculate"
             android:onClick="submitOrder"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
